update to match statement

--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -7,13 +7,34 @@
 
 <section class="hero-unit">
   <header class="article-header">Welcome to the GitLab Support Portal</header>
- 
-<p>Open a support ticket by using the <a href="https://support.gitlab.com/hc/en-us/requests/new" title="Submit a request">Submit a request</a> form, view your current requests by clicking <a href="https://support.gitlab.com/hc/en-us/requests/" title="My activities">My activities</a>.</p>
+  <p>Please note this support portal is for administrators of self-managed GitLab instances and users of <a href="https://gitlab.com/">GitLab.com</a>. If you are a user of GitLab where the URL is similar to <em>gitlab.yourorg.com</em>, please contact your organization.</p>
+  <hr>
+  <h1>Self-managed (hosted on your own site/server)</h1>
+  <p><a href="https://forum.gitlab.com">GitLab Community Forum</a><br>
+  I'm using a self-managed GitLab Core or Community Edition server without a paid license, and I need help.</p>
+  <p><a href="https://support.gitlab.com/hc/en-us/requests/new?ticket_form_id=426148">GitLab Enterprise Edition Customer Support</a><br>
+  I have a paid license (Starter, Premium, Ultimate), and I need help.</p>
+  <hr>
 
- <p>Visit <a href="https://about.gitlab.com/support/" title="Support main">https://about.gitlab.com/support/</a> for more information about the support we provide.</p>
+  <h1>GitLab.com</h1> 
+  <p><a href="https://forum.gitlab.com">GitLab Community Forum</a><br>
+  I need help using GitLab.com.</p>
+  <p><a href="https://support.gitlab.com/hc/en-us/requests/new?ticket_form_id=334447">GitLab.com Account Support</a><br>
+  I need help accessing my free GitLab.com account.</p>
+  <p><a href="https://support.gitlab.com/hc/en-us/requests/new?ticket_form_id=334447">GitLab.com Customer Support</a><br>
+  I have a paid subscription to GitLab.com (Bronze, Silver, or Gold), and I need help.<br>
+  A bug is severely impacting my ability to use GitLab.com.</p>
+  <hr>
+
+  <h1>About GitLab Support</h1>
+  <p>Please visit our <a href="https://about.gitlab.com/support/" title="Support main">Support page</a> for more information about the support we provide including what is considered <a href="https://about.gitlab.com/support/#outside-of-the-scope-of-support-for-all-tiers">out of scope</a> and our <a href="https://about.gitlab.com/support/#general-support-practices">general support practices</a>.</p>
+  <hr>
   
-<p> - GitLab Support Team </p>
+  <h1>View Support Tickets</h1>
+  <p>View your current requests by clicking <a href="https://support.gitlab.com/hc/en-us/requests/" title="My activities">My activities</a>.</p>
+  
 </section>
+
 
 <section class="knowledge-base">
   {{#if categories}}
